--- a/brackets.css
+++ b/brackets.css
@@ -1,7 +1,7 @@
 body {
-  margin: 0;
+  margin: 20px;
   background-color: #eee;
-  font: 12px arial,helvetica,clean,sans-serif;
+  font: 10px arial,helvetica,clean,sans-serif;
 }
 
 .tournament {
@@ -37,7 +37,7 @@ body {
 
 .tournament .bracket-round.current-round {
   opacity: 1;
-  font-size: 14px;
+  font-size: 12px;
 }
 
 .tournament .round-header {
@@ -103,6 +103,7 @@ body {
 
 .tournament .opponent-name {
   width: 100%;
+  padding: 5px;
   vertical-align: middle;
 }
 
