--- a/brackets.css
+++ b/brackets.css
@@ -7,6 +7,8 @@ body {
 .tournament {
   width: 100%;
   display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 .tournament .bracket-section {
@@ -16,22 +18,20 @@ body {
 }
 
 .tournament .bracket-section.middle-section {
-  width: 20%;
-  background-color: #eee;
+    flex: 1 20%;
+    min-height: 132px;
+    background-color: #eee;
 }
 
 .tournament .bracket-section.left-section,
 .tournament .bracket-section.right-section {
-  width: 40%;
-}
-
-.tournament .bracket-section.right-section {
-  flex-direction: row-reverse;
+  min-height: 364px;
+  flex: 1 40%;
 }
 
 .tournament .bracket-round {
-  width: 100%;
-  max-width: 250px;
+  min-width: 170px;
+  max-width: 170px;
   opacity: .4;
 }
 
@@ -47,53 +47,53 @@ body {
 
 .tournament .round-body {
   width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
-.tournament .round-matches {
-  width: 100%;
+.tournament .round-body .bottom-section {
+  margin-top: 30px;
 }
 
 .tournament .round-match {
-  background-color: #fff;
   list-style-type: none;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
-  -webkit-box-shadow: 0px 0px 4px 0px rgba(90, 90, 90, 0.2);
-  -moz-box-shadow:    0px 0px 4px 0px rgba(90, 90, 90, 0.2);
-  box-shadow:         0px 0px 4px 0px rgba(90, 90, 90, 0.2);
+  -webkit-box-shadow: 0px 0px 5px 0px rgba(90, 90, 90, 0.4);
+  -moz-box-shadow:    0px 0px 5px 0px rgba(90, 90, 90, 0.4);
+  box-shadow:         0px 0px 5px 0px rgba(90, 90, 90, 0.4);
   padding: 0;
-  margin: 10px;
-  margin-bottom: 20px;
+  margin: 5px;
+}
+
+.tournament .left-section .top-section .round-opponent {
+  background-color: #ff9999;
+}
+
+.tournament .right-section .top-section .round-opponent {
+  background-color: #aaffaa;
+}
+
+.tournament .right-section .bottom-section .round-opponent {
+  background-color: #9999ff;
+}
+
+.tournament .left-section .bottom-section .round-opponent {
+  background-color: #ffffff;
 }
 
 .tournament .round-opponent {
-  padding: 10px;
+  padding: 5px;
   position: relative;
 }
 
-.tournament .round-opponent .rank {
-  font-size: 10px;
-  position: absolute;
-  right: -15px;
-  top: 45%;
-  width: 10px;
-  height: 100%;
-  text-align: center;
-  vertical-align: middle;
+.tournament .left-section .bottom-section li.round-opponent:first-child {
+  border-bottom: 1px dotted #ccc;
 }
 
 .tournament li.round-opponent:first-child {
-  border-bottom: 1px dotted #ccc;
+  border-bottom: 1px dotted #fff;
 }
 
 .tournament .opponent-info {
   display: flex;
-  height: 30px;
+  height: 25px;
 }
 
 .tournament .bracket-section.middle-section li.round-opponent:last-child .opponent-info,
@@ -109,6 +109,48 @@ body {
 
 .tournament .opponent-avatar {
   padding: 5px
-  width: 30px;
-  height: 30px;
+  width: 25px;
+  height: 25px;
+}
+
+@media all and (max-width: 1229px) {
+  .tournament {
+    flex-direction: column;
+  }
+
+  .tournament .bracket-section.left-section {
+    order: 1;
+  }
+
+  .tournament .bracket-section.middle-section {
+    order: 3;
+  }
+
+  .tournament .bracket-section.right-section {
+    order: 2;
+  }
+
+  .tournament .bracket-section.right-section {
+    flex-direction: row;
+  }
+}
+
+@media all and (min-width: 1315px) {
+  .tournament .bracket-section.left-section {
+    order: 1;
+  }
+
+  .tournament .bracket-section.middle-section {
+    order: 2;
+  }
+
+  .tournament .bracket-section.right-section {
+    order: 3;
+  }
+}
+
+@media all and (min-width: 1230px) {
+  .tournament .bracket-section.right-section {
+    flex-direction: row-reverse;
+  }
 }
